# serializer version: 1
# name: test_all_entities
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_chlorine_setpoint',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Chlorine setpoint',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Chlorine setpoint',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'cl1',
      'unique_id': '1234567890_mbf_par_cl1',
      'unit_of_measurement': <UnitOfRatio.PARTS_PER_MILLION: 'ppm'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_cover_reduction_when_covered',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Cover reduction (when covered)',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Cover reduction (when covered)',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_cover_reduction',
      'unique_id': '1234567890_mbf_par_hidro_cover_reduction',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_hydrolisis_target_production_level',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolisis target production level',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Hydrolisis target production level',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro',
      'unique_id': '1234567890_mbf_par_hidro',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 1.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_hydrolysis_shutdown_temp_threshold',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolysis shutdown temp. threshold',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Hydrolysis shutdown temp. threshold',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_shutdown_temperature',
      'unique_id': '1234567890_mbf_par_hidro_shutdown_temperature',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 14.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_ph_max_limit',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH max limit',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.PH: 'ph'>,
      'original_icon': None,
      'original_name': 'pH max limit',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ph1',
      'unique_id': '1234567890_mbf_par_ph1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 14.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_ph_min_limit',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH min limit',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.PH: 'ph'>,
      'original_icon': None,
      'original_name': 'pH min limit',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ph2',
      'unique_id': '1234567890_mbf_par_ph2',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 1000.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_redox_setpoint',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Redox setpoint',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.VOLTAGE: 'voltage'>,
      'original_icon': None,
      'original_name': 'Redox setpoint',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'rx1',
      'unique_id': '1234567890_mbf_par_rx1',
      'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_smart_lower_temperature',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Smart lower temperature',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Smart lower temperature',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'smart_temp_low',
      'unique_id': '1234567890_mbf_par_smart_temp_low',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_smart_upper_temperature',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Smart upper temperature',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Smart upper temperature',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'smart_temp_high',
      'unique_id': '1234567890_mbf_par_smart_temp_high',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_temperature_setpoint',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Temperature setpoint',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Temperature setpoint',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'heating_temp',
      'unique_id': '1234567890_mbf_par_heating_temp',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
  ])
# ---
# name: test_setup_when_modules_absent
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
        <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
        <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
        <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.neopool_cover_reduction_when_covered',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Cover reduction (when covered)',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Cover reduction (when covered)',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_cover_reduction',
      'unique_id': '1234567890_mbf_par_hidro_cover_reduction',
      'unit_of_measurement': '%',
    }),
  ])
# ---
